--- a/app/css/jquery.mobile.custom.css
+++ b/app/css/jquery.mobile.custom.css
@@ -91,7 +91,12 @@
 	border:1px solid #03A993;
 	font-weight:bold;
 	color:#03A993;
-	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#F7F8FD),color-stop(15%,#fff));
+	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#F7F8FD),color-stop(15%,#FFF));
+	background-image: -webkit-linear-gradient( #F7F8FD, #FFF );
+	background-image:    -moz-linear-gradient( #F7F8FD, #FFF );
+	background-image:     -ms-linear-gradient( #F7F8FD, #FFF );
+	background-image:      -o-linear-gradient( #F7F8FD, #FFF );
+	background-image:         linear-gradient( #F7F8FD, #FFF );
 	text-shadow:none;
 }
 .ui-bar-f.content{
