--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -686,3 +686,68 @@ li.userInList h3{
 	border: none;
 	box-shadow: none;
 }
+#infoDetails{
+	text-align: center;
+	font-size: 20px;
+	color: #2c3e4f;
+	margin-top: 11px;
+}
+#infoDetails #idProductContent .photosp .pic{
+	width: 160px;
+	height: 160px;
+	margin: 2px;
+	border: none;
+}
+#infoDetails #idProductContent #priceApp{ color: #F57133; }
+#infoDetails #titleDescription,
+#infoDetails #description,
+#infoDetails #seller{ font-size: 14px; }
+#infoDetails .buttonsDetails{
+	margin-bottom: 20px; 
+}
+#infoDetails .buttonsDetails div[data-corners="true"]{
+	border-radius: 5px !important;
+	font-weight: initial !important;
+} 
+#infoDetails .buttonsDetails div[data-corners="true"] button{
+	font-weight: initial !important;
+}
+#infoDetails .buttonsDetails div[data-theme="c"]{ 
+	color: #2c3e4f;
+	border: 1px solid #2c3e4f;
+	background: #fff;
+}
+#infoDetails .buttonsDetails div[data-theme="e"]{
+	background: #F57133;
+	border: 1px solid #F57133;
+} 
+#singleDialogProducts #contentImgs{
+	overflow: hidden;
+	position: relative;
+}
+#singleDialogProducts #contentImgs div{
+	display: inline-block;
+}
+#singleDialogProducts #contentImgs img{
+	display: block;
+	margin: 0 auto;
+}
+/*clases para bloquear el estilo viejo*/
+#infoDetails #idProductContent #title{
+	font-size: 20px;
+	color: #2c3e4f;	
+}
+#infoDetails #idProductContent{ font-size: 20px; }
+#infoDetails #idProductContent .photosp{
+	border-top: none;
+	border-bottom: none;
+	background: inherit;
+	/*padding: 3px;*/
+}
+#infoDetails #idProductContent #seller{
+	/*font-weight: inherit; */
+	color: #2c3e4f;
+ 	padding-right: 0; 
+ 	float: none; 
+}
+/*end class*/
