details new design Store app
Former-commit-id: 9081587b1d25e426905ae957b1067550f28833e8

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -1127,4 +1127,9 @@ li.userInList h3{
 		width: 500px;
 	}
 }
+#page-lstStoreSubCategory #categotyList li,
+#page-lstStoreCategory #categotyList li{
+	background: none;
+	background-color: #ECF0F1;
+}
 /*Store Ends*/
