PopUp de search en funciones
Dentro de funciones.js se creo una funcion que permite agregar el popup
del search global, la funcion se llama createSearchPopUp, y recibe como
parametro cual es el contenedor (como el scroller) que va a ocultar para
aparecer el popup. Debe ser incluido en el BEFORE de la pagina que va a
usar la busqueda y hacer referencia al item #searchPopUp.

<a href="#searchPopUp" data-rel="popup"
data-position-to="window">Seacrh</a>

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -917,6 +917,46 @@ li.userInList h3{
   margin: 0 auto;
 }
 
+#searchPopUp #seacrh-btn {
+    width: 50px !important;
+    height: 50px !important;
+    border-radius: 50% !important;
+	background-color: #EC5A28;
+}
+
+#searchPopUp #custom-btn span span {
+    height: 50px !important;  
+    line-height: 70px;
+}
+
+#searchPopUp #custom-btn span span {
+    height: 50px !important;  
+    line-height: 70px;
+}
+
+#searchPopUp .imagebox{
+	height: 40px;
+	width: 40px;
+    background:url('newdesign/search.png');
+	background-size: 35px 35px;
+	background-repeat: no-repeat;
+	background-color: #EC5A28;
+}
+
+#searchPopUp .ui-btn-up-m {
+	border: 1px solid #FFF;
+	background: #FFF;
+	font-weight: bold;
+	color: #EB5A28;
+}
+
+#searchPopUp .ui-btn-hover-m {
+	border: 1px solid #bbbbbb ;
+	background: #FFF;
+	font-weight: bold;
+	color: #EB5A28 ;
+}
+
 /*Preferences Starts*/
 #page-preferences .ui-link, #page-preferences .ui-link:visited{
 	color: #FFF;
