--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -336,12 +336,12 @@
 	}
 }
 /*Find Friends and Friends*/
-#page-lstStoreOption #menu,
+#page-myOrders #menu, #page-lstStoreOption #menu,
 #page-lstStoreCategory #menu,#page-lstStoreSubCategory #menu,
 #page-friendUser #menu, #page-friendSearch #menu,
 #page-lstStore #menu, #page-detailsProducts #menu,
 #page-lstMyStore #menu,
-#page-newTag #menu{
+#page-newTag #menu,#page-freeProducts #menu{
 	display: block;
 }
 #page-friendUser #scroller,#page-friendSearch #scroller{
@@ -386,6 +386,7 @@ li.userInList h3{
 	font-size: 1.4em;
 }
 /*notificaciones*/
+#page-freeProducts .ui-bar-b,
 #page-lstStoreOption .ui-bar-b,
 #page-notif .ui-bar-b{
 	text-shadow: 0 0 0;
@@ -1113,12 +1114,10 @@ li.userInList h3{
 }
 
 /*Store*/
+#page-freeProducts .list-wrapper,
 #page-lstStore .list-wrapper,
-#page-lstMyStore .list-wrapper{ top: 63px; }
-@media (min-width: 600px){
-	#page-lstStore .list-wrapper,
-	#page-lstMyStore .list-wrapper{ top: 47px; }
-}
+#page-lstMyStore .list-wrapper{ top: 47px; }
+#page-freeProducts .list-info,
 #page-lstStore .list-info,
 #page-lstMyStore .list-info{
 	list-style: none;
@@ -1127,8 +1126,10 @@ li.userInList h3{
 	/*margin: 15px 0 0;*/
 	padding: 5px 0 0;
 }
+#page-freeProducts .list-info li,
 #page-lstStore .list-info li,
 #page-lstMyStore .list-info li{ height: 115px; }
+#page-freeProducts .list-info li img,
 #page-lstMyStore .list-info li img,
 #page-lstStore .list-info li img{
 	width: 45%;
@@ -1139,6 +1140,7 @@ li.userInList h3{
 	-webkit-border-radius: 5px !important;
 	-o-border-radius: 5px !important;
 }
+#page-freeProducts .list-info li h3,
 #page-lstMyStore .list-info li h3,
 #page-lstStore .list-info li h3{
 	font-size: 12px;
@@ -1150,30 +1152,41 @@ li.userInList h3{
 	word-wrap: normal;
 	font-weight: 300;
 }
+#page-freeProducts .list-info li h3,
 #page-lstMyStore .list-info li h3,
 #page-lstStore .list-info li h3{ max-height: 30px;}
+#page-freeProducts .list-info li h3.costProduct,
 #page-lstMyStore .list-info li h3.costProduct,
 #page-lstStore .list-info li h3.costProduct{ color: #A42A00;}
+#page-freeProducts .list-info li h3.date{ font-size: 10px; }
 @media (min-width: 600px){
+	#page-freeProducts .list-info li,
 	#page-lstMyStore .list-info li,
 	#page-lstStore .list-info li{  height: 200px; }
+	#page-freeProducts .list-info li h3,
 	#page-lstMyStore .list-info li h3,
 	#page-lstStore .list-info li h3{ 
 		font-size: 20px; 
 		max-height: 60px;
 	}
+	#page-freeProducts .list-info li h3.date{ font-size: 15px; }
+	#page-freeProducts .list-info li img,
 	#page-lstMyStore .list-info li img,
 	#page-lstStore .list-info li img{ width: 30%; }
 	/*#page-lstStore .list-info{ margin: 45px 0 0; }*/
+	#page-freeProducts .list-wrapper,
 	#page-lstMyStore .list-wrapper,
 	#page-lstStore .list-wrapper{ top: 75px; }
 }
+#page-freeProducts #rowTitle,
 #page-lstMyStore #rowTitle,
 #page-lstStore #rowTitle{
 	background-color: #8b9b9c;
 	margin: 5px auto 0;
 	padding: 2% 10%;
 }
+#page-freeProducts #resultList .ui-input-search,
+#page-myOrders #resultList .ui-input-search,
 #page-lstMyStore #rowTitle .ui-input-search,
 #page-lstStore #rowTitle .ui-input-search{
 	border-radius: 5px !important;
@@ -1376,9 +1389,58 @@ li.userInList h3{
 		width: 500px;
 	}
 }
+#page-myOrders #resultList li,
 #page-lstStoreSubCategory #categotyList li,
 #page-lstStoreCategory #categotyList li{
 	background: none;
 	background-color: #ECF0F1;
 }
+#page-myOrders div[data-role="content"]{ top:7px;}
+#page-myOrders #fs-wrapper{
+	top: 63px;
+	margin: 0;
+	box-shadow: 0 0 0;
+
+}
+#page-myOrders #resultList form.ui-listview-filter{
+	background: none;
+	background-color: #8b9b9c;
+	padding: 2% 10%;
+}
+#page-myOrders #rowTitle{ 
+	height: 3.9em; 
+	background: none;
+	margin: 0;
+	padding: 0;
+	background: #b3b9bd;
+}
+#page-myOrders #rowTitle .ui-block-a div{ background: #b3b9bd url('newdesign/page2.png') no-repeat center 4px; }
+#page-myOrders #rowTitle .ui-block-b div{ background: #b3b9bd url('newdesign/search2.png') no-repeat center 4px; }
+#page-myOrders #rowTitle .ui-block-a div,
+#page-myOrders #rowTitle .ui-block-b div{
+	display: table;
+	height: 3.9em;
+	width:50%;
+	background-size: 50%;
+	margin: 0 auto;
+}
+#page-myOrders #rowTitle div div a{
+	text-align: center;
+	height: 100%;
+	display: table-cell;
+	font-weight: normal;
+	color: #384e63;
+	/*border-right: 1px solid #a1afb0;*/
+	vertical-align: bottom;
+	font-size: small;
+}
+@media screen and (min-width: 600px) {
+	#page-myOrders #rowTitle .ui-block-a div,
+	#page-myOrders #rowTitle .ui-block-b div{
+		background-size: 40%;
+		width:20%;
+	}
+}
+#page-myOrders .nameProduct{ padding: 0; }
+#page-myOrders .price{ color: #F57133; }
 /*Store Ends*/
