--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -959,6 +959,42 @@ li.userInList h3{
 	color: #EB5A28 ;
 }
 
+#searchPopUp .ui-btn-inner {
+	margin: 1px !important;
+	padding: 4px !important;
+}
+
+#searchPopUp .ui-corner-all {
+	-webkit-border-radius: .6em /*{global-radii-blocks}*/;
+	border-radius: .6em /*{global-radii-blocks}*/;	
+}
+
+/*Seacrh Starts*/
+
+#page-search {
+	background-color: #E1E6E7;
+	border: none;
+	border-shadow: none;
+	border:1px solid #E1E6E7;
+	box-shadow: none;
+}
+
+#page-search #content, #page-search #scroller, #page-search #fs-wrapper{
+	background-color: #E1E6E7;
+	border: none !important;
+	border-shadow: none;
+	border:1px solid #E1E6E7;
+	box-shadow: none;
+}
+
+#page-search #fs-wrapper{
+	margin: 0 !important;
+}
+
+#page-search .ui-content{
+	margin-top: 20px;
+}
+
 /*Preferences Starts*/
 #page-preferences .ui-link, #page-preferences .ui-link:visited{
 	color: #FFF;
